--- a/app/src/main/res/drawable/btn_custom.xml
+++ b/app/src/main/res/drawable/btn_custom.xml
@@ -3,7 +3,7 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="#26a69a" />
+    <solid android:color="#083B6E" />
 
     <corners
         android:bottomLeftRadius="5dp"
