--- a/app/src/main/res/drawable/et_custom.xml
+++ b/app/src/main/res/drawable/et_custom.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
-    android:shape="rectangle" >
-
-    <solid android:color="#f5f5f5" />
+    android:shape="rectangle">
+    <gradient
+        android:endColor="#D6DBDF"
+        android:startColor="#7F8C8D "
+        android:angle="90" />
+<!--    <solid android:color="#f5f5f5" />-->
 
     <stroke
         android:width="1dp"
