--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegisterFragment">
+    tools:context=".RegisterFragment"
+    android:background="@drawable/et_custom">
 
     <TextView
         android:id="@+id/tv_logo"
@@ -40,7 +41,7 @@
         android:padding="15dp"
         android:inputType="textPersonName"
         android:fontFamily="@font/roboto_regular"
-        android:background="@drawable/et_custom"
+        android:background="@drawable/textbg"
         android:textSize="15sp" />
 
     <EditText
@@ -54,7 +55,7 @@
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:inputType="textEmailAddress"
-        android:background="@drawable/et_custom"
+        android:background="@drawable/textbg"
         android:textSize="15sp" />
 
     <EditText
@@ -68,7 +69,7 @@
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:inputType="textPassword"
-        android:background="@drawable/et_custom"
+        android:background="@drawable/textbg"
         android:textSize="15sp" />
 
     <EditText
@@ -81,7 +82,7 @@
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:inputType="textPassword"
-        android:background="@drawable/et_custom"
+        android:background="@drawable/textbg"
         android:textSize="15sp" />
 
     <RelativeLayout
