--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,94 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".LoginFragment">
 
-
-
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        android:background="@drawable/app_background"/>
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="50sp"
-        android:fontFamily="@font/indigo_daisy"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="10dp"
-        android:layout_above="@id/tv_subtitle"/>
 
-    <TextView
-        android:id="@+id/tv_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tag"
-        android:textSize="17sp"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="50dp"
-        android:layout_above="@id/et_email"/>
+  <TextView
+      android:id="@+id/tv_title"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:text="@string/app_name"
+      android:textSize="50sp"
+      android:fontFamily="@font/indigo_daisy"
+      android:layout_marginStart="25dp"
+      android:layout_marginBottom="10dp"
+      android:layout_above="@id/tv_subtitle"/>
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/e_mail"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:padding="15dp"
-        android:inputType="textEmailAddress"
+  <TextView
+      android:id="@+id/tv_subtitle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/tag"
+      android:textSize="17sp"
+      android:fontFamily="@font/roboto_regular"
+      android:layout_marginStart="25dp"
+      android:layout_marginBottom="50dp"
+      android:layout_above="@id/moodleId"/>
 
-        android:fontFamily="@font/roboto_regular"
-        android:layout_above="@id/et_password"
-        android:background="@drawable/textbg"
-        android:textSize="15sp" />
+  <EditText
+      android:id="@+id/moodleId"
+      android:layout_width="match_parent"
+      android:layout_height="50dp"
+      android:hint="@string/e_mail"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:padding="15dp"
+      android:inputType="textEmailAddress"
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/password"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="textPassword"
-        android:layout_centerInParent="true"
-        android:background="@drawable/textbg"
-        android:textSize="15sp" />
+      android:fontFamily="@font/roboto_regular"
+      android:layout_above="@id/password"
+      android:background="@drawable/textbg"
+      android:textSize="15sp" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_password"
-        android:background="@drawable/btn_custom"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/white"
-        android:angle="45"
-        android:text="@string/login"/>
+  <EditText
+      android:id="@+id/password"
+      android:layout_width="match_parent"
+      android:layout_height="50dp"
+      android:hint="@string/password"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:layout_marginTop="10dp"
+      android:padding="15dp"
+      android:fontFamily="@font/roboto_regular"
+      android:inputType="textPassword"
+      android:layout_centerInParent="true"
+      android:background="@drawable/textbg"
+      android:textSize="15sp" />
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_arrow_right"
-        android:layout_above="@id/swipeRight"
-        android:layout_centerHorizontal="true"/>
+  <Button
+      android:id="@+id/login_button"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/password"
+      android:background="@drawable/btn_custom"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:layout_marginTop="15dp"
+      android:fontFamily="@font/roboto_regular"
+      android:textColor="@android:color/white"
+      android:angle="45"
+      android:text="@string/login"/>
 
-    <TextView
-        android:id="@+id/swipeRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/swipe_left_for_register"
-        android:textSize="15sp"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"/>
+  <ImageView
+      android:layout_width="30dp"
+      android:layout_height="30dp"
+      android:src="@drawable/ic_arrow_right"
+      android:layout_above="@id/swipeRight"
+      android:layout_centerHorizontal="true"/>
+
+  <TextView
+      android:id="@+id/swipeRight"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/swipe_left_for_register"
+      android:textSize="15sp"
+      android:fontFamily="@font/roboto_regular"
+      android:layout_centerHorizontal="true"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="20dp"/>
 
 </RelativeLayout>
