--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00796b</color>
-    <color name="colorPrimaryDark">#00695C</color>
+    <color name="colorPrimaryDark">#C2DBD5</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="HeaderColor">#223E37</color>
+
 </resources>
