--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".LoginFragment">
 
    <LinearLayout
@@ -80,7 +80,20 @@
       android:textColor="@android:color/white"
       android:text="Login"/>
 
+  <ProgressBar
+      android:id="@+id/progress_circular"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerVertical="true"
+      android:layout_centerHorizontal="true"
+      android:indeterminateTint="@color/colorPrimary"
+      android:background="@drawable/progressbg"
+      android:visibility="invisible"
+      >
+  </ProgressBar>
+
   <ImageView
+      android:id="@+id/arrow"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:src="@drawable/ic_arrow_right"
