--- a/app/src/main/res/drawable/shape_top.xml
+++ b/app/src/main/res/drawable/shape_top.xml
@@ -2,21 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <corners
-        android:radius="30dp">
+        android:topLeftRadius="90sp">
     </corners>
 
     <solid
-        android:color="#4B7570">
+        android:color="#F2F1F5">
     </solid>
 
-    <stroke
-        android:color="#4B7570"
-        android:width="2dp">
-    </stroke>
-
     <size
-        android:width="165dp"
-        android:height="20dp">
+        android:height="140dp">
     </size>
 
 </shape>
